[package]
name = "xdp-compatibility"
description = "Agave XDP host compatibility scripts"
publish = false
version = "0.1.0"
edition = "2024"

[dependencies]
agave-logger = "3.1.8"
agave-xdp = "3.1.8"
caps = "0.5.6"
clap = { version = "4.5.58", features = ["derive"] }
crossbeam-channel = "0.5.15"
log = "0.4.29"
rand = "0.9.2"
solana-clap-utils = "3.1.8"
solana-net-utils = "3.1.8"
solana-turbine = { version = "3.1.8", features = ["agave-unstable-api"] }
