[package]
name = "xdp-compatibility"
description = "Agave XDP host compatibility scripts"
publish = false
version = "0.1.0"
edition = "2024"

[dependencies]
agave-xdp = { version = "3.1.12", features = ["agave-unstable-api"] }
caps = "0.5.6"
clap = { version = "4.5.58", features = ["derive"] }
crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
log = "0.4.29"
rand = "0.9.2"
